2025-11-17  Oliver Kiddle  <opk@zsh.org>

	* 54034: Completion/compinit: ignore completer filenames with funny
	characters in them

2025-11-16  dana  <dana@dana.is>

	* 53671: Src/hist.c, Test/D02glob.ztst: hist: untokenise input
	to :A and :P

	* 53578 (tweaked): Src/Zle/computil.c, Src/builtin.c,
	Src/exec.c: silence gcc warnings

	* 53577: Completion/Unix/Command/_git: improve max-verbose,
	other descriptions

2025-11-13  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 53964 (+ tiny change): Doc/Zsh/params.yo: mention zsh/random
	module in the description of the parameter RANDOM

2025-11-12  Oliver Kiddle  <opk@zsh.org>

	* Heon Jeong: 54008: Src/Zle/compmatch.c: infinite loop running
	completion with specific multibyte character and locale combination

	* Christopher Bock: 54026: Completion/Debian/Command/_uscan:
	update uscan options

	* Christopher Bock: 54025: Completion/Debian/Command/_apt:
	complete apt-mark minimize-manual

	* Lawrence Velázquez: 53775: Doc/Zsh/builtins.yo,
	Doc/Zsh/compwid.yo, Doc/Zsh/mod_ksh93.yo, Doc/Zsh/mod_private.yo,
	Doc/Zsh/mod_random.yo, Doc/Zsh/options.yo, Doc/Zsh/zle.yo, README:
	Fix some documentation typos

	* 54071: Completion/Zsh/Type/_ps1234: fix prompt colour completion

	* 54043, 54055 (tweaked to use "reset" as suggested by Mikael):
	Doc/Zsh/zle.yo, Src/prompt.c, Src/Modules/hlgroup.c,
	Src/Modules/watch.c, Src/Zle/complist.c, Src/Zle/zle.h,
	Src/Zle/zle_main.c, Src/Zle/zle_refresh.c, Src/Zle/zle_tricky.c:
	allow highlighing attributes to be turned back off

	* 54037: Src/Zle/zle_refresh.c: fix to highlight layers where
	special is assigned a low layer

	* 54036: Src/prompt.c, Src/Zle/complist.c, Src/Zle/zle_refresh.c:
	fixes related to prompt attribute leftovers

2025-11-10  Bart Schaefer  <schaefer@zsh.org>

	* 54064: Src/params.c, Test/K01nameref.ztst: avoid crash on named
	references to argv/ARGC, improve syntax checks in valid_nameref().
	Leaves some edgecase issues unresolved (see tests).
